namespace ReservationService.Domain.Enums;

public enum ReservationStatus
{
    Pending,
    Confirmed,
    Cancelled
}