using ReservationService.Domain.Entities;

namespace ReservationService.Domain.Interfaces;

public interface IClubRepository : IAsyncRepository<TennisClub>
{
    
}